fix: Ensure big symbol doesn’t overflow hero unit
fix #16

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,6 +28,8 @@ $hub-specs--hero-background: linear-gradient(135deg, $hub-specs--primary-dark-co
 }
 
 .layout--home > .underlay.header {
+  overflow-x: hidden;
+
   @media screen and (min-width: $widescreen-breakpoint) {
     background:
       repeat-x bottom center/auto 30px url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='80' height='10' viewBox='0 0 80 10'><polygon fill='white' points='0,0 28,0 35,10 45,10 52,0 80,0 80,10 0,10'/></svg>"),
